Login and navbar tweaks
WIP navbar- Responsiveness not working properly
Login page done

--- a/Interface/interface/views/navbar.pug
+++ b/Interface/interface/views/navbar.pug
@@ -1,14 +1,14 @@
 nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
-    button.navbar-toggler.hidden-md-up.pull-xs-right(type='button', data-toggle='collapse', data-target='#navbar') &#x2630;
-    #navbar.navbar-nav.collapse.navbar-toggleable-sm
-        .container  
-            a(class="navbar-brand" href="/")
+    a(class="navbar-brand" href="/" style='padding-left: 50px;')
                 img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:30px; display: inline-block;' class='img-fluid')
                 span(style="display: inline-block; margin:5px; color:white;") WorkIT
+    button.navbar-toggler.hidden-md-up.pull-xs-right(type='button', data-toggle='collapse', data-target='#navbar') &#x2630;
+    #navbar.navbar-nav.collapse.navbar-toggleable-md
+        .container
             .nav-items.clearfix
                 a.nav-item.nav-link(href='/publicfeed') Feed  
                 a.nav-item.nav-link(href='/team') Team
-                a.nav-item.nav-link(href='/About') About
+                a.nav-item.nav-link(href='/about') About
                 div(class="container")
                     div(class="dropdown")
                         a.btn.btn-light.pull-md-right(style="padding: 3px;" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown")
@@ -21,5 +21,12 @@ nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
                             a(class="dropdown-item" href="/admin") Admin tools
                         if currentUser
                             a.nav-item.nav-link.btn.btn-logout.pull-md-right(href='/auth/logout') Logout
-                        else 
+                        else
                             a.nav-item.nav-link.btn.btn-login.pull-md-right(href='/auth/login') Login/Register
+            div(class='container h-100')        
+                    div(class='d-flex justify-content-center h-100')
+                        div(class='searchbar')
+                            input.nav-item(class='search_input' type='text' name='' placeholder='Search...')
+                            a.nav-item(href='#' class='search_icon')
+                                i(class='fas fa-search')
+                
