--- a/Interface/interface/public/stylesheets/full-slider.css
+++ b/Interface/interface/public/stylesheets/full-slider.css
@@ -5,7 +5,7 @@
  */
 
 body {
-	background: #1d2a33 url('../images/bg.jpg') no-repeat;
+	background: #1d2a33 url('../images/wp1.jpg') no-repeat;
 	background-size: cover; 
 }
 
@@ -23,6 +23,10 @@ body {
 	min-height: calc(100vh - 34px);
 }
 .foot {
+	position:fixed;
+	left: 0;
+  bottom: 0;
+  width: 100%;
 	font-size: .85rem;
 	padding: .5rem 0;
 	color: rgba(255,255,255, .6);
@@ -189,3 +193,53 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
+
+
+
+
+
+
+
+	.searchbar{
+	margin-bottom: auto;
+	margin-top: auto;
+	height: 40px;
+	background-color:rgba(0,0,0, .65);;
+	border-radius: 20px;
+	padding: 5px;
+	}
+
+	.search_input{
+	color: white;
+	border: 0;
+	outline: 0;
+	background: none;
+	width: 0;
+	caret-color:transparent;
+	line-height: 30px;
+	transition: width 0.4s linear;
+	}
+
+	.searchbar:hover > .search_input{
+	padding: 0 0px;
+	width: 200px;
+	caret-color:white;
+	transition: width 0.4s linear;
+	}
+
+	.searchbar:hover > .search_icon{
+	background: white;
+	color: #e74c3c;
+	}
+
+	.search_icon{
+	height: 30px;
+	width: 30px;
+	float: right;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+	color:white;
+	text-decoration:none;
+	}
