--- a/Interface/interface/views/index.pug
+++ b/Interface/interface/views/index.pug
@@ -10,6 +10,7 @@ html(lang='en')
         link(rel='stylesheet', href='/stylesheets/bootstrap.min.css', crossorigin='anonymous')
         link(rel='stylesheet', href='/stylesheets/icon.css')
         link(rel='stylesheet', href='/stylesheets/font-awesome.css')
+        link(rel='stylesheet', href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous')
         link(rel='stylesheet', href='/stylesheets/full-slider.css')
     body   
         include navbar
