--- a/Interface/interface/views/navbar.pug
+++ b/Interface/interface/views/navbar.pug
@@ -6,7 +6,7 @@ nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
     #navbar.navbar-nav.collapse.navbar-toggleable-md
         .container
             .nav-items.clearfix
-                a.nav-item.nav-link(href='/publicfeed') Feed  
+                a.nav-item.nav-link(href='/feed') Feed  
                 a.nav-item.nav-link(href='/team') Team
                 a.nav-item.nav-link(href='/about') About
                 div(class="container")
@@ -20,9 +20,9 @@ nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
                             div(class="dropdown-divider")
                             a(class="dropdown-item" href="/admin") Admin tools
                         if currentUser
-                            a.nav-item.nav-link.btn.btn-logout.pull-md-right(href='/auth/logout') Logout
+                            a.nav-item.nav-link.btn.btn-logout.pull-md-right(href='/logout') Logout
                         else
-                            a.nav-item.nav-link.btn.btn-login.pull-md-right(href='/auth/login') Login/Register
+                            a.nav-item.nav-link.btn.btn-login.pull-md-right(href='/login') Login/Register
             div(class='container h-100')        
                     div(class='d-flex justify-content-center h-100')
                         div(class='searchbar')
