--- a/Interface/interface/views/register.pug
+++ b/Interface/interface/views/register.pug
@@ -1,5 +1,38 @@
 extends layout
 
 block content
-
-    h1 Register page
+  .main.container
+    .row
+      .col-md-6.col-md-offset-3
+        h1.display-4.m-b-2 Register
+        form(action='/register' method='POST')
+          div.form-group
+            label(for='number' class='cols-sm-2 control-label') Name:
+            div(class='cols-sm-10')
+              div(class='input-group')
+                span(class='input-group-addon')
+                  i(class='fa fa-user fa' aria-hidden='true')
+                input(type='text' class='form-control' name='name' id='name')
+          div.form-group
+            label(for='number' class='cols-sm-2 control-label') Number:
+            div(class='cols-sm-10')
+              div(class='input-group')
+                span(class='input-group-addon')
+                  i(class='fa fa-hashtag fa' aria-hidden='true')
+                input(type='text' class='form-control' name='number' id='number' placeholder="aXXXXX")
+          div.form-group
+            label(for='number' class='cols-sm-2 control-label') Email:
+            div(class='cols-sm-10')
+              div(class='input-group')
+                span(class='input-group-addon')
+                  i(class='fa fa-share-alt fa' aria-hidden='true')
+                input(type='text' class='form-control' name='email' id='email')
+          div.form-group
+            label(for='password' class='cols-sm-2 control-label') Password:
+            div(class='cols-sm-10')
+              div(class='input-group')
+                span(class='input-group-addon')
+                  i(class='fa fa-lock fa' aria-hidden='true')
+                input(type='password' class='form-control' name='password' id='password' placeholder='*******')     
+          div.form-group
+            button.btn.btn-primary(type='submit' style='width:100%;') Register
