--- a/Interface/interface/views/navbar.pug
+++ b/Interface/interface/views/navbar.pug
@@ -16,13 +16,11 @@ nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
                         ul(class="dropdown-menu")
                             a(class="dropdown-item" href='/posts/newpost') New Post
                             a(class="dropdown-item" href="/profile") My Profile
-                            a(class="dropdown-item" href="/posts/myposts") My Posts 
-                            div(class="dropdown-divider")
-                            a(class="dropdown-item" href="/admin") Admin tools
+                            a(class="dropdown-item" href="/posts/myposts") My Posts
                         if currentUser
-                            a.nav-item.nav-link.btn.btn-logout.pull-md-right(href='/logout') Logout
+                            a.nav-item.nav-link.btn.btn-logout.pull-md-right(href='/auth/logout') Logout
                         else
-                            a.nav-item.nav-link.btn.btn-login.pull-md-right(href='/login') Login/Register
+                            a.nav-item.nav-link.btn.btn-login.pull-md-right(href='/auth/login') Login/Register
             div(class='container h-100')        
                     div(class='d-flex justify-content-center h-100')
                         div(class='searchbar')
