--- a/Interface/interface/views/team.pug
+++ b/Interface/interface/views/team.pug
@@ -1,1 +1,9 @@
-h1 hi
+extends layout
+
+block content
+  .main.container
+    h1= title
+    h2 ALUNO1
+    h2 ALUNO2
+    h2 ALUNO3
+    h2 ALUNO4
