--- a/Interface/interface/views/index.pug
+++ b/Interface/interface/views/index.pug
@@ -33,7 +33,7 @@ html(lang='en')
                                 img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:100px; display: inline-block;' class='img-fluid')
                                 br
                                 br
-                                h6 This is WorkIT, share your work with your coleagues.
+                                h6 This is WorkIT, share your work with your colleagues.
                                 br 
                     .carousel-item(style="background-image: url('https://i.imgur.com/Mz3rH7D.jpg')")
                         .carousel-caption.d-none.d-md-block
