--- a/Interface/interface/views/layout.pug
+++ b/Interface/interface/views/layout.pug
@@ -16,7 +16,8 @@ head
     p.foot.text-xs-center Made with 
       i(class='fas fa-heart') 
       t.text-xs-center  by WorkIT
-    
 
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js', crossorigin='anonymous')
+  script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js')
+  script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js', crossorigin='anonymous')
+  script(src='https://unpkg.com/axios/dist/axios.min.js')
+  script(src='/javascripts/delete.js')
