--- a/Interface/interface/views/publication.pug
+++ b/Interface/interface/views/publication.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  button.w3-btn.w3-round-large(onclick="window.location.href = '/logout'") Logout
+  button.btn.btn-primary(onclick="window.location.href = '/logout'") Logout
   h1 Publication
