--- a/Interface/interface/views/register.pug
+++ b/Interface/interface/views/register.pug
@@ -7,21 +7,21 @@ block content
         h1.display-4.m-b-2 Register
         form(action='/register' method='POST')
           div.form-group
-            label(for='number' class='cols-sm-2 control-label') Name:
+            label(for='text' class='cols-sm-2 control-label') Name:
             div(class='cols-sm-10')
               div(class='input-group')
                 span(class='input-group-addon')
                   i(class='fa fa-user fa' aria-hidden='true')
                 input(type='text' class='form-control' name='name' id='name')
           div.form-group
-            label(for='number' class='cols-sm-2 control-label') Number:
+            label(for='text' class='cols-sm-2 control-label') Number:
             div(class='cols-sm-10')
               div(class='input-group')
                 span(class='input-group-addon')
                   i(class='fa fa-hashtag fa' aria-hidden='true')
                 input(type='text' class='form-control' name='number' id='number' placeholder="aXXXXX")
           div.form-group
-            label(for='number' class='cols-sm-2 control-label') Email:
+            label(for='text' class='cols-sm-2 control-label') Email:
             div(class='cols-sm-10')
               div(class='input-group')
                 span(class='input-group-addon')
