--- a/Interface/interface/views/admin-feed.pug
+++ b/Interface/interface/views/admin-feed.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .main.container
-       button.w3-btn.w3-round-large(onclick="window.location.href = '/auth/logout'") Logout
+       button.btn.btn-primary(onclick="window.location.href = '/auth/logout'") Logout
        h1 Admin Page
         table(border="1")
           tr
@@ -16,6 +16,7 @@ block content
             th Target
             th Author
             th Comments
+            th Control
           each p in feed
             tr
               td= p._id
@@ -27,6 +28,7 @@ block content
               td= p.tags
               td= p.target
               td= p.author
-              
-                each c in p.comments
-                  td= c.commentText
+              each c in p.comments
+                td= c.commentText
+              td
+                button.btn.btn-primary(onclick="deletePublication('" + p._id + "')") Delete
