--- a/Interface/interface/views/newPublication.pug
+++ b/Interface/interface/views/newPublication.pug
@@ -4,14 +4,14 @@ block content
   .main.container
     .row
       .col-md-6.col-md-offset-3
-        h1.display-4.m-b-2 Register
+        h1.display-4.m-b-2 New Publication
         form(action='/feed/newPublication' method='POST')
             div.form-group
                 label(for='text' class='cols-sm-2 control-label') Title:
                     input(type='text' class='form-control' name='title' id='title')  
             div.form-group
                 label(for='text' class='cols-sm-2 control-label') Text:
-                    input(type='text' class='form-control' name='text' id='text')  
+                    textarea(rows="4" cols="50" class='form-control' name='text' id='text')  
             div.form-group
                 label(for='text' class='cols-sm-2 control-label') Tags:
                     input(type='text' class='form-control' name='tags' id='tags')  
