--- a/Interface/interface/views/navbar.pug
+++ b/Interface/interface/views/navbar.pug
@@ -7,6 +7,8 @@ nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
         .container
             .nav-items.clearfix
                 a.nav-item.nav-link(href='/feed') Feed  
+                a.nav-item.nav-link(href='/groups') Groups  
+                a.nav-item.nav-link(href='/events') Events  
                 a.nav-item.nav-link(href='/team') Team
                 a.nav-item.nav-link(href='/about') About
                 div(class="container")
