--- a/Interface/interface/views/about.pug
+++ b/Interface/interface/views/about.pug
@@ -2,5 +2,14 @@ extends layout
 
 block content
   .main.container
-    h1 About
-    h4 Built with Express (Backend), Pug (Frontend) and MongoDB (databse).
+      h1 About
+      br
+      div WorkIT is a social network focused on sharing information between students and professors from the 
+      div various universities in the country. Here, users can share notes, suggestions, images and
+      div files with other students who attend the same subjects. It is also possible to join groups or events,
+      div thus receiving all their publications in the user's personalized feed.
+      p
+      div To access all this features, simply create an account, providing your name, student (or teacher) number 
+      div and an email, also inserting a personal password for security purposes.
+      p
+      div Start using WorkIT now, and share your work with your colleagues.
