--- a/Interface/interface/views/layout.pug
+++ b/Interface/interface/views/layout.pug
@@ -3,7 +3,7 @@ head
   meta(charset='utf-8')
   meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
   meta(http-equiv='x-ua-compatible', content='ie=edge')
-  title WorkIT | #{title}
+  title WorkIT
   link(rel='stylesheet', href='/stylesheets/bootstrap.min.css', crossorigin='anonymous')
   link(rel='stylesheet', href='/stylesheets/icon.css')
   link(rel='stylesheet', href='/stylesheets/font-awesome.css')
