--- a/Interface/interface/views/index.pug
+++ b/Interface/interface/views/index.pug
@@ -6,7 +6,7 @@ html(lang='en')
         meta(name='viewport', content='device-width, initial-scale=1, shrink-to-fit=no')
         //mostra o conteudo na melhor qualidade possivel (internet explorer)
         meta(http-equiv='x-ua-compatible', content='ie=edge')
-        title WorkIT | #{title}
+        title WorkIT
         link(rel='stylesheet', href='/stylesheets/bootstrap.min.css', crossorigin='anonymous')
         link(rel='stylesheet', href='/stylesheets/icon.css')
         link(rel='stylesheet', href='/stylesheets/font-awesome.css')
@@ -23,26 +23,24 @@ html(lang='en')
                     li(data-target='#carouselExampleIndicators', data-slide-to='3')
                 .carousel-inner(role='listbox')
                     //primeiro slide - o link é definido na linha abaixo
-                    .carousel-item.active(style="background-image: url('https://i.imgur.com/ReXbOpj.jpg')")
+                    .carousel-item.active(style="background-image: url('https://i.imgur.com/EfUoRRo.jpg')")
                         .carousel-caption.d-none.d-md-block
                             .main.container.text-xs-center
                                 br
                                 br
                                 br
-                                br
-                                img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:100px; display: inline-block;' class='img-fluid')
+                                img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:150px; display: inline-block;' class='img-fluid')
                                 br
                                 br
                                 h5 This is WorkIT, share your work with your colleagues.
-                                br 
+                                br
                     .carousel-item(style="background-image: url('https://i.imgur.com/Mz3rH7D.jpg')")
                         .carousel-caption.d-none.d-md-block
                             .main.container.text-xs-center
                                 br
                                 br
                                 br
-                                br
-                                img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:100px; display: inline-block;' class='img-fluid')
+                                img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:150px; display: inline-block;' class='img-fluid')
                                 br
                                 br
                                 h5 This is WorkIT, share your work with your colleagues.
@@ -53,24 +51,22 @@ html(lang='en')
                                 br
                                 br
                                 br
-                                br
-                                img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:100px; display: inline-block;' class='img-fluid')
+                                img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:150px; display: inline-block;' class='img-fluid')
                                 br
                                 br
                                 h5 This is WorkIT, share your work with your colleagues.
                                 br
-                    .carousel-item(style="background-image: url('https://i.imgur.com/EfUoRRo.jpg')")
+                    .carousel-item(style="background-image: url('https://i.imgur.com/ReXbOpj.jpg')")
                         .carousel-caption.d-none.d-md-block
                             .main.container.text-xs-center
                                 br
                                 br
                                 br
-                                br
-                                img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:100px; display: inline-block;' class='img-fluid')
+                                img(src='https://i.imgur.com/HjUcbLu.png' style='max-width:150px; display: inline-block;' class='img-fluid')
                                 br
                                 br
                                 h5 This is WorkIT, share your work with your colleagues.
-                                br
+                                br 
                 a.carousel-control-prev(href='#carouselExampleIndicators', role='button', data-slide='prev')
                     span.carousel-control-prev-icon(aria-hidden='true')
                     span.sr-only Previous
