--- a/Interface/interface/views/navbar.pug
+++ b/Interface/interface/views/navbar.pug
@@ -18,19 +18,19 @@ nav.navbar.navbar-fixed-top.navbar-dark.bg-inverse
                             img.avatar.img-circle.hidden-xs-down(style="max-width:30px; max-height:30px;" src="https://i.imgur.com/uYq21Ou.png")
                         ul(class="dropdown-menu")
                             a(class="dropdown-item" href='/feed/newPublication') New Publication
-                            a(class="dropdown-item" href='/feed/newGroup') New Group
-                            a(class="dropdown-item" href='/feed/newEvent') New Event
+                            a(class="dropdown-item" href='/groups/newGroup') New Group
+                            a(class="dropdown-item" href='/events/newEvent') New Event
                             .dropdown-divider
                             a(class="dropdown-item" href="/users/myProfile") My Profile
                             a(class="dropdown-item" href="/users/editProfile") Edit Profile
                             a(class="dropdown-item" href="/posts/myPublications") My Posts
-                        if currentUser
+                        if user
                             a.nav-item.nav-link.btn.btn-logout.pull-md-right(href='/auth/logout') Logout
                         else
                             a.nav-item.nav-link.btn.btn-login.pull-md-right(href='/auth/login') Login/Register
             div(class='container h-100')        
                     div(class='d-flex justify-content-center h-100')
                         div(class='searchbar')
-                            input.nav-item(class='search_input' type='text' name='' placeholder='Search')
+                            input.nav-item(class='search_input' type='text' name='search' placeholder='Search')
                             a.nav-item(href='?' class='search_icon')
                                 i(class='fas fa-search' name='search')
