--- a/Interface/interface/views/feed.pug
+++ b/Interface/interface/views/feed.pug
@@ -1,16 +1,70 @@
 extends layout
 
 block content
-  .main.container
-    h1 Feed
-    each p in feed
-      h2= p.title
-      h3= p.date
-      div= p.text
-      h2 Author:
-      div= p.author
-      each c in p.comments
-        h3 Comment:
-        div= c.commentAuthor 
-        div= c.commentText
-      h3 ------------------------------------------------------------
+  .container-fluid.gedf-wrapper
+    .row
+      //perfil
+      .col-md-3
+        .card(style='margin-top: 1rem')
+          .card-block
+            h4.card-title Diego Porto
+          ul.list-group.list-group-flush
+            li.list-group-item Mestrado em Engenharia Informática
+            li.list-group-item pg37149@alunos.uminho.pt
+          .card-block
+            a.card-link(href='#') Editar Perfil
+      //publicação      
+      .col-md-6.gedf-main
+        .card(style='margin-top: 1rem')
+          .card-header
+            ul.nav.nav-pills.card-header-pills
+              li.nav-item
+                button.btn.btn-primary(type='submit') Registar Publicação
+              li.nav-item
+                button.btn.btn-primary(type='submit') Registar Evento
+        //feed
+        .card(style='margin-top: 2rem')
+          .card-header
+            .row
+              .col-md-1
+                img.rounded-circle(width='45', height='45', src='../images/wp1.jpg')
+              .col-md-6
+                .h5 Manoel Pereira
+                .h7.text-muted(style='font-size: 0.8rem') @a12345
+          .card-block
+            .h7.text-muted(style='font-size: 0.8rem; margin-bottom: 1rem')
+              i.fa.fa-clock-o
+              | 23-01-2020
+            h5.card-title(style='color:#417aba') Exame de recurso
+            p.card-text
+              | Caros alunos, o exame de recurso será dia 27 de Janeiro das 9h às 12h. Preciso que aqueles que têm intenção de aparecer me avisem por email para saber que sala vou reservar. 
+        .card(style='margin-top: 2rem')
+          .card-header
+            .row
+              .col-md-1
+                img.rounded-circle(width='45', height='45', src='../images/bg.jpg')
+              .col-md-6
+                .h5 Carlos Alberto
+                .h7.text-muted(style='font-size: 0.8rem') @pg35483
+          .card-block
+            .h7.text-muted(style='font-size: 0.8rem; margin-bottom: 1rem')
+              i.fa.fa-clock-o
+              | 23-01-2020
+            h5.card-title(style='color:#417aba') Notas teste
+            p.card-text
+              | Caros alunos, os resultados do teste já estão disponíveis. Não estão famosos...
+      //grupos e eventos        
+      .col-md-3
+        .card(style='margin-top: 1rem')
+          .card-block
+            h4 Grupos
+        .list-group
+          button.list-group-item.list-group-item-action(type='button') PRI 19/20
+          button.list-group-item.list-group-item-action(type='button') Mineração de Dados
+          button.list-group-item.list-group-item-action(type='button') GCS 19/20
+          button.list-group-item.list-group-item-action(type='button') Base de Dados noSQL
+        .card(style='margin-top: 1rem')
+          .card-block
+            h4 Eventos
+        .list-group
+          button.list-group-item.list-group-item-action(type='button') Exame de recurso PRI
