--- a/Interface/interface/views/layout.pug
+++ b/Interface/interface/views/layout.pug
@@ -18,3 +18,5 @@ head
   script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js', crossorigin='anonymous')
   script(src='https://unpkg.com/axios/dist/axios.min.js')
   script(src='/javascripts/delete.js')
+  script(src='/javascripts/pubform.js')
+  script(src='/javascripts/eventform.js')
